--- a/app/src/main/res/layout/album_list_item.xml
+++ b/app/src/main/res/layout/album_list_item.xml
@@ -20,6 +20,7 @@
             android:src="@drawable/music"/>
 
         <LinearLayout
+            android:id="@+id/album_bg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
