--- a/app/src/main/res/layout/album_list_item.xml
+++ b/app/src/main/res/layout/album_list_item.xml
@@ -23,9 +23,7 @@
             android:id="@+id/album_bg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@color/primary_light"
-            >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/album_music_name"
