--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -114,19 +114,21 @@
                     android:id="@+id/music_mini_option_previous"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:background="@drawable/ic_skip_previous_white_24dp"/>
+                    android:background="@drawable/ic_skip_previous_black_24dp"/>
 
                 <Button
                     android:id="@+id/music_mini_option_play"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:background="@drawable/ic_play_arrow_white_24dp"/>
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/ic_play_arrow_pink_500_24dp"/>
 
                 <Button
                     android:id="@+id/music_mini_option_next"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:background="@drawable/ic_skip_next_white_24dp"/>
+                    android:background="@drawable/ic_skip_next_black_24dp"/>
 
 
             </LinearLayout>
