完成专辑界面

--- a/app/src/main/res/layout/activity_play_detail.xml
+++ b/app/src/main/res/layout/activity_play_detail.xml
@@ -64,7 +64,7 @@
                     android:text="哎哟蔚蔚"
                     android:textSize="15sp"
                     android:textColor="@color/secondary_text"
-                    android:transitionName="music_name"/>
+                    android:transitionName="artist_name"/>
 
             </LinearLayout>
 
