--- a/app/src/main/res/layout/music_list_item.xml
+++ b/app/src/main/res/layout/music_list_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/music_list_item_view"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:maxHeight="?attr/actionBarSize"
-    android:elevation="0dp"
+    app:cardElevation="0dp"
     android:layout_marginTop="1px"
     android:clickable="true"
     android:foreground="?attr/selectableItemBackground">
