--- a/app/src/main/res/layout/activity_play_detail.xml
+++ b/app/src/main/res/layout/activity_play_detail.xml
@@ -50,6 +50,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/play_detail_music_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="如风过境"
@@ -57,6 +58,7 @@
                     android:textColor="@color/primary_text"
                     android:transitionName="music_name"/>
                 <TextView
+                    android:id="@+id/play_detail_artist_name"
                     android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
