--- a/app/src/main/res/layout/play_option.xml
+++ b/app/src/main/res/layout/play_option.xml
@@ -34,6 +34,8 @@
             android:layout_height="30dp"
             android:background="@drawable/ic_skip_previous_black_24dp"
             android:layout_margin="15dp"/>
+
+
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/paly_detail_play"
             android:layout_width="50dp"
@@ -43,8 +45,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             app:elevation="3dp"
-            android:src="@drawable/ic_play_arrow_white_24dp"
-            android:background="@drawable/ic_play_circle_filled_white_24dp" />
+            android:src="@drawable/ic_play_arrow_white_24dp" />
         <Button
             android:id="@+id/paly_detail_next"
             android:layout_width="30dp"
