--- a/app/src/main/res/layout/activity_play_detail.xml
+++ b/app/src/main/res/layout/activity_play_detail.xml
@@ -7,46 +7,27 @@
     android:orientation="vertical"
     tools:context="com.ksblletba.orangemusic.PlayDetailActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <android.support.design.widget.CoordinatorLayout
-            android:id="@+id/paly_detail_albumimage"
+        <ImageView
+            android:id="@+id/play_detail_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="350dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/music"
+            android:transitionName="album_image"
+            android:fitsSystemWindows="true"/>
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/play_detail_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-            </android.support.v7.widget.Toolbar>
-
-
-            <ImageView
-                android:id="@+id/play_detail_image"
-                android:layout_width="match_parent"
-                android:layout_height="380dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/music"
-                android:transitionName="album_image"
-                android:fitsSystemWindows="true"/>
-
-        </android.support.design.widget.CoordinatorLayout>
 
         <RelativeLayout
             android:id="@+id/paly_detail_musicinfo"
-            android:layout_width="match_parent"
+            android:layout_below="@id/play_detail_image"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="30dp">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
                 android:orientation="vertical">
 
                 <TextView
@@ -54,7 +35,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="如风过境"
-                    android:textSize="20sp"
+                    android:textSize="25sp"
                     android:textColor="@color/primary_text"
                     android:transitionName="music_name"/>
                 <TextView
@@ -64,27 +45,14 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="哎哟蔚蔚"
-                    android:textSize="15sp"
+                    android:textSize="20sp"
                     android:textColor="@color/secondary_text"
                     android:transitionName="artist_name"/>
-
-            </LinearLayout>
-
+           </LinearLayout>
 
         </RelativeLayout>
 
-
-    </LinearLayout>
-
-
-
-
-
-
-
     <include layout="@layout/play_option"
         android:id="@+id/play_detail_option"/>
-
-
 
 </RelativeLayout>
