--- a/app/src/main/res/layout/activity_play_detail.xml
+++ b/app/src/main/res/layout/activity_play_detail.xml
@@ -7,11 +7,13 @@
     android:orientation="vertical"
     tools:context="com.ksblletba.orangemusic.PlayDetailActivity">
 
+
         <ImageView
             android:id="@+id/play_detail_image"
             android:layout_width="match_parent"
             android:layout_height="350dp"
             android:scaleType="centerCrop"
+            android:layout_alignParentTop="true"
             android:src="@drawable/music"
             android:transitionName="album_image"
             android:fitsSystemWindows="true"/>
