--- a/app/src/main/res/layout/play_option.xml
+++ b/app/src/main/res/layout/play_option.xml
@@ -40,10 +40,10 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/play_detail_fav"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:background="@drawable/ic_favorite_border_black_18dp"
+            android:id="@+id/play_detail_rule"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@drawable/ic_repeat_black_24dp"
             android:layout_margin="15dp"/>
 
         <Button
