--- a/app/src/main/res/layout/nav_head.xml
+++ b/app/src/main/res/layout/nav_head.xml
@@ -16,6 +16,7 @@
         android:id="@+id/nav_headsongname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxLines="1"
         android:textColor="@color/primary_text"
         android:textSize="20sp"
         android:layout_marginLeft="20dp"
@@ -25,6 +26,7 @@
         android:id="@+id/nav_headartist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxLines="1"
         android:textColor="@color/primary_text"
         android:textSize="15sp"
         android:layout_marginLeft="20dp"
