完成歌单及其音乐的播放

--- a/app/src/main/res/layout/activity_play_detail.xml
+++ b/app/src/main/res/layout/activity_play_detail.xml
@@ -11,8 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="420dp"
         android:scaleType="centerCrop"
-        android:transitionName="album_image"
-        android:src="@drawable/music"/>
+        android:transitionName="album_image" />
 
     <Button
         android:id="@+id/play_detail_backbutton"
@@ -39,7 +38,6 @@
                 android:id="@+id/play_detail_music_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="如风过境"
                 android:textSize="25sp"
                 android:maxLines="1"
                 android:textColor="@color/primary_text"
@@ -50,7 +48,6 @@
                 android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="哎哟蔚蔚"
                 android:textSize="20sp"
                 android:maxLines="1"
                 android:textColor="@color/secondary_text"
